--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
-    "nodemailer": "^6.9.16"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
+    "razorpay": "^2.9.5",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
